Revision history for HTML-TabbedExamples-Generate

v0.0.4  2014-01-31
    - Add provides in META.yml (CPANTS Kwalitee).

v0.0.3  2013-01-26
    - Bump the minimum version of perl to 5.14.x.

v0.0.2  2013-01-24
    - Add missing prereqs on MooX::late/etc.
        - Fixes CPAN smoking failures

v0.0.1  2013-01-22
    - First version, released on an unsuspecting world